testing/framework/resources/Advanced/Failing/mondrian/query6273.e
USA	CA	Palo Alto	5005	Andre Thompson	Andre Thompson	M	M	High School Degree	$30K - $50K
